--- a/myWebsite/myWebsite.css
+++ b/myWebsite/myWebsite.css
@@ -84,3 +84,20 @@ li:hover {
     padding: 10px;
   }
 }
+
+.main1 {
+  color: #4747ea;
+  font-size: 1rem;
+  font-weight: normal;
+  text-decoration: none;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.main2 {
+  color: #ef5d30;
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: normal;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
