--- a/aboutjkpg/aboutjkpg.css
+++ b/aboutjkpg/aboutjkpg.css
@@ -9,6 +9,11 @@ body {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+  color: #000;
+}
+
 h1 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -39,10 +44,12 @@ header h1 {
 }
 
 li {
+  text-decoration: none;
   font-family: "Times New Roman", Times, serif;
 }
 
 li:hover {
+  text-decoration: none;
   font-weight: bolder;
 }
 
@@ -61,9 +68,18 @@ li:hover {
 
 .pictures {
   width: 50vw;
+  padding-left: 1rem;
+  padding-top: 3rem;
   display: flex;
   flex-direction: column;
   border: #000;
+}
+
+.first {
+  padding-bottom: 7rem;
+}
+.second {
+  padding-bottom: 7rem;
 }
 
 .mammadiv {
@@ -72,13 +88,14 @@ li:hover {
   grid-template-columns: 1fr 1fr;
 }
 
-@media only screen and (max-width: 37.5rem) {
+@media screen and (max-width: 520px) {
   h1 {
     font-size: 1.5rem;
   }
 
   li,
   li:hover {
+    text-decoration: none;
     font-size: 0.875rem;
   }
 
@@ -86,22 +103,56 @@ li:hover {
   .pictures {
     padding: 0.625rem;
   }
-}
 
-a {
-  text-decoration: none;
-  color: #000;
+  .main1 {
+    flex-direction: column;
+  }
+  .main2 {
+    flex-direction: column;
+  }
+
+  .first {
+    padding-bottom: 0rem;
+  }
+  .second {
+    padding-bottom: 0rem;
+  }
+
+  .mammadiv {
+    padding: 0.625rem;
+    display: flex;
+    flex-direction: column;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  a {
+    text-decoration: none;
+    color: #000;
+  }
+
+  @media screen and (min-width: 520px) {
+    .mammadiv {
+      display: grid;
+      grid-template-columns: 1, 1fr;
+    }
+  }
 }
 
 .main1 {
+  text-decoration: none;
   color: #7096d1;
+  /* display: flex; */
+  /* flex-direction: column; */
   font-size: 1.563rem;
   font-weight: normal;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .main2 {
+  text-decoration: none;
   color: #bad6eb;
+  /* display: flex; */
+  /* flex-direction: column; */
   font-size: 1.563rem;
   font-weight: normal;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -109,5 +160,6 @@ a {
 }
 
 .jkpgheader {
+  display: flex;
   width: 100vw;
 }
