--- a/myPortfolio/myPortfolio.css
+++ b/myPortfolio/myPortfolio.css
@@ -10,7 +10,8 @@ p {
   margin: 1rem;
 }
 .gradient {
-  height: 20vh;
+  padding-top: 5vh;
+  height: 10vh;
   background-image: linear-gradient(
     320deg,
     #d5d5e2,
@@ -53,20 +54,29 @@ p {
 .topnav {
   background-color: #f4a77d;
   border: 10px solid #f4a77d;
-  color: #fff8ef;
-  width: 100vw;
+  display: flex;
+  align-items: center;
+  height: 3vh;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   box-shadow: 0 0 14px #e27e4b;
 }
-.navbar {
-  display: flex;
-  justify-content: space-evenly;
+
+.navbartext {
+  text-decoration: none;
+  color: #fff8ef;
+  /* display: flex; */
+  /* flex-direction: column; */
+  font-size: 1rem;
+  font-weight: normal;
+  font-family: "Times New Roman", Times, serif;
 }
 a {
-  color: black;
   text-decoration: none;
+  color: #fff8ef;
+  align-items: center;
 }
+
 a:hover {
   font-weight: bold;
 }
@@ -102,10 +112,11 @@ h1 {
   background-color: #f2899c;
   color: #fff8ef;
   display: flex;
+  align-items: center;
   justify-content: center;
-  font-size: 45px;
-  width: 1500px;
-  height: 60px;
+  font-size: 1.5rem;
+  width: 100vw;
+  height: 6vh;
   margin-top: 25px;
 }
 h3 {
@@ -122,12 +133,12 @@ h6 {
   font-size: 1rem;
 }
 .slide-left {
-  width: 100%;
-
+  width: 100vw;
   overflow: hidden;
   max-width: 100vw;
 }
 .slide-left h1 {
+  text-align: center;
   animation-duration: 2s;
   animation-name: slide-left;
 }
@@ -145,12 +156,33 @@ h6 {
   }
 }
 
-#responsive {
+@keyframes headline {
+  0% {
+    margin-right: 100%;
+    background-color: #ffff;
+    width: 300%;
+  }
+
+  80% {
+    margin-right: 80%;
+    background-color: #ffb6c6;
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 520px) {
+  .gradient {
+    height: 10vh;
+    padding-bottom: 3rem;
+  }
+}
+
+.responsive {
   position: relative;
-  min-width: 800px;
-  max-width: 1000px;
+  width: 100vw;
   margin-left: auto;
   margin-right: auto;
+  align-items: center;
 }
 
 /* .photo {
