--- a/myPortfolio/myPortfolio.css
+++ b/myPortfolio/myPortfolio.css
@@ -1,5 +1,5 @@
 body {
-  margin: 1rem;
+  margin: 0rem;
 }
 p {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -83,28 +83,24 @@ a:hover {
 .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  padding-block: 1.5rem;
-  width: min(95%, 70rem);
-  margin-inline: auto;
+  gap: 1rem;
+  padding: 1rem;
+  max-width: 100vw;
 }
 
-#stream {
+.container img {
+  max-width: 100vw;
+  height: 50vh;
+}
+
+/* #stream {
   padding-top: 4vw;
 }
 #kimp {
   padding-left: 7vw;
   padding-right: 3.5vw;
-}
-/* .pic:last-child {
-  grid-column-start: 3;
-  grid-row-start: 1;
-  grid-row-end: 3;
 } */
-.pic {
-  display: grid;
 
-  width: 100vw;
-}
 .grid-column-span-2 {
   grid-column: span 2;
 }
@@ -133,9 +129,12 @@ h6 {
   font-size: 1rem;
 }
 .slide-left {
+  position: relative;
   width: 100vw;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
   overflow: hidden;
-  max-width: 100vw;
 }
 .slide-left h1 {
   text-align: center;
@@ -177,6 +176,25 @@ h6 {
   }
 }
 
+@media screen and (max-width: 520px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+  .container {
+    padding: 0.625rem;
+    display: flex;
+    flex-direction: column;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media screen and (min-width: 520px) {
+    .container {
+      display: grid;
+      grid-template-columns: 1, 1fr;
+    }
+  }
+}
+
 .responsive {
   position: relative;
   width: 100vw;
@@ -184,9 +202,3 @@ h6 {
   margin-right: auto;
   align-items: center;
 }
-
-/* .photo {
-  display: flex;
-  flex-direction: row;
-  width: 100vw;
-} */
