allt klart tror jag hoppas jag
heja heja

--- a/myPortfolio/myPortfolio.css
+++ b/myPortfolio/myPortfolio.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0rem;
+  margin-left: 20px;
 }
 p {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -92,14 +92,6 @@ a:hover {
   max-width: 100vw;
   height: 50vh;
 }
-
-/* #stream {
-  padding-top: 4vw;
-}
-#kimp {
-  padding-left: 7vw;
-  padding-right: 3.5vw;
-} */
 
 .grid-column-span-2 {
   grid-column: span 2;
@@ -201,4 +193,18 @@ h6 {
   margin-left: auto;
   margin-right: auto;
   align-items: center;
+}
+#heading {
+  margin-bottom: 0.5rem;
+}
+
+#input-email {
+  margin-right: 0.5rem;
+  margin-bottom: 3rem;
+}
+
+#subscribe-button {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  margin-bottom: 3rem;
 }
